// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiline.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
<%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>

<%=
  react_component(
    "HelloWorld",
    { greeting: "Hello from react-rails." }
  ) %>
<%= react_component(
      "HelloWorld",
       { greeting: "Hello from react-rails." }
       ) %>

    <%= react_component(
      "HelloWorld",
       { greeting: "Hello from react-rails." }
       )
           %>
  <%=
 react_component(
      "HelloWorld",
    { greeting: "Hello from react-rails." },
    { greeting: "Hello from react-rails." },
    { greeting: "Hello from react-rails." },
    { greeting: "Hello from react-rails." }

       )
          %>

</div>

=====================================output=====================================
<div>
  <%= react_component("HelloWorld", { greeting: "Hello from react-rails." }) %>

  <%=
    react_component('HelloWorld', { greeting: 'Hello from react-rails.' })
  %>
  <%=
    react_component('HelloWorld', { greeting: 'Hello from react-rails.' })
  %>

  <%=
    react_component('HelloWorld', { greeting: 'Hello from react-rails.' })
  %>
  <%=
    react_component(
      'HelloWorld',
      { greeting: 'Hello from react-rails.' },
      { greeting: 'Hello from react-rails.' },
      { greeting: 'Hello from react-rails.' },
      { greeting: 'Hello from react-rails.' },
    )
  %>
</div>

================================================================================
`;

exports[`multiline_comment.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<%#
# Flash Partial

This partial renders flash messages on every page.

## Relevant Helpers:

- \`flash\`:
  Returns a hash,
  where the keys are the type of flash (alert, error, notice, etc)
  and the values are the message to be displayed.
%>

=====================================output=====================================
<%#
  # Flash Partial

  This partial renders flash messages on every page.

  ## Relevant Helpers:

  - \`flash\`:
    Returns a hash,
    where the keys are the type of flash (alert, error, notice, etc)
    and the values are the message to be displayed.
%>

================================================================================
`;

exports[`single.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================



      <%= link_to 'New Order', new_order_path, class: "btn btn-success" %>




=====================================output=====================================
<%= link_to 'New Order', new_order_path, class: "btn btn-success" %>

================================================================================
`;

exports[`single_multiline.html.erb 1`] = `
====================================options=====================================
parsers: ["erb"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================





      <%= link_to "New Order",
       class: "btn btn-success" %>



=====================================output=====================================
<%=
  link_to 'New Order', class: 'btn btn-success'
%>

================================================================================
`;
